# dfs-sim

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  add_features_to_captain_mode.py  create_captain_mode_extracted.py  enhance_captain_mode.py  load_data.py  main.py  pyproject.toml
archive/etl/: process_raw_data.py  raw_data_pull.py  sportsline.py
docs/: MMA_ENHANCEMENTS.md  NASCAR_IMPLEMENTATION_GUIDE.md  NFL_IMPLEMENTATION_GUIDE.md  sport_rules.py
notebooks/: sandbox.ipynb
src/: models.py
src/cli/: optimize.py  process_data.py  setup_data.py
src/config/: correlation_config.py  nascar_config.py  optimization_config.py  projection_config.py
src/data/: __init__.py  csv_loader.py  csv_modifier.py  data_manager.py  json_extractor.py  llm_newsletter_processor.py  newsletter_processor.py
src/models/: __init__.py  contest.py  lineup.py  player.py  site.py
src/optimization/: __init__.py  base_optimizer.py  field_generator.py  mma_optimizer.py  nascar_optimizer.py  nfl_optimizer.py
src/processors/: __init__.py  base.py  mma.py  nascar.py  nfl.py
src/simulation/: __init__.py  correlations.py  simulator.py  variance_model.py
tests/: test_data_loading.py  test_mma_correlations.py
tests/golden/: test_optimize.py  test_process_data.py  test_setup_data.py
